webportal/css/dashboard.css
.main {
	display: flex;
	flex-direction: row;
	width: 100%;
	flex-grow: 1;
}

.message {
	position: absolute;
	z-index: 10;
	width: 100%;
	color: var(--backgroundStart);
	font-weight: bold;
	padding: 1rem;
	text-align: center;
	background-color: var(--textSecondary);
	align-self: center;
}

.menu-button {
	display: none;
	font-size: 2.5rem;
	color: var(--textSecondary);
	padding: 0.5rem;
	cursor: pointer;
	height: 3rem;
	position: absolute;
}

.menu {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	min-width: 9rem;
	max-width: 9rem;
	flex-grow: 1;
	background-color: transparent;
	box-shadow: 0 0 10px var(--backgroundEnd);
	padding: 1rem;
}

.menu-list {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

.menu-list li {
	color: var(--textSecondary);
	margin: 1rem 0;
	cursor: pointer;
}

.menu-list li:hover {
	font-weight: bold;
}

.menu-list li.active {
	margin-left: 1rem;
	font-weight: bold;
}

.pages {
	flex-grow: 1;
	padding: 1rem;
	max-width: 100%;
}

.page {
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
}

.page h1 {
	text-align: left;
	margin-top: 0;
}

section {
	display: flex;
	flex-direction: column;
	width: 100%;
	align-items: flex-start;
	border: 1px solid var(--textSecondary);
	border-radius: 0.5rem;
	padding: 0.5rem;
	margin-bottom: 0.5rem;
}

section:last-child {
	margin-bottom: 0;
}

section h2 {
	margin: 0;
	font-size: 1.2rem;
}

label {
	font-size: 1rem;
	color: var(--textSecondary);
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
}

.input {
	font-size: 1rem;
	padding: 0.5rem;
	outline: none;
	width: 100%;
}

.input-actual {
	max-width: 6rem;
}

#payment-currency {
	font-size: 1rem;
	color: var(--textSecondary);
	margin-right: 0.5rem;
}

.error {
	color: var(--error);
}

button {
	width: 50%;
	max-width: 12rem;
	height: 2.5rem;
	margin-top: 0.5rem;
	font-size: 1rem;
	background-color: var(--button);
	color: var(--textPrimary);
	border: none;
	border-radius: 0.5rem;
	cursor: pointer;
}

button:hover {
	background-color: var(--buttonHovered);
}

button:disabled {
	opacity: 0.5;
	cursor: default;
}

.checkbox-container {
	display: flex;
	flex-direction: row;
	align-items: center;
}

.checkbox {
	width: 1.2rem;
	height: 1.2rem;
	margin-right: 0.5rem;
}

.checkbox-label {
	margin: 0;
}

.password {
	position: relative;
	width: 100%;
	max-width: 20rem;
}

.toggle-checkbox {
	position: absolute;
	width: 1.5rem;
	height: 1.5rem;
	right: 0.25rem;
	top: 0.25rem;
	z-index: 1;
	opacity: 0;
	cursor: pointer;
}

.toggle-icon {
	position: absolute;
	width: 1.5rem;
	height: 1.5rem;
	right: 0.5rem;
	top: 0.5rem;
	z-index: 1;
}

.hint-button {
	margin-left: 0.5rem;
	font-size: 0.8rem;
	width: 1rem;
	height: 1rem;
	color: #001f8f;
	background-color: var(--textSecondary);
	position: relative;
	border: 1px solid var(--textSecondary);
	border-radius: 50%;
	cursor: pointer;
	display: inline-block;
	text-align: center;
}

.hint {
	position: absolute;
	left: 1.5rem;
	top: 0;
	color: var(--hint);
	background-color: var(--textSecondary);
	font-size: 0.8rem;
	text-align: left;
	border: 1px solid var(--textSecondary);
	border-radius: 0.25rem;
	padding: 0.25rem;
	min-width: 10rem;
	z-index: 2;
	display: none;
}

.hint-button:hover .hint {
	display: initial;
}

.balance {
	text-align: left;
}

.container {
	width: 100%;
}

.content {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	margin-bottom: -0.5rem;
}

.content-item {
	display: flex;
	flex-direction: column;
	margin-right: 0.5rem;
	margin-bottom: 0.5rem;
	padding: 0.5rem;
	border: 1px solid var(--textSecondary);
	border-radius: 0.5rem;
	min-width: 12rem;
}

.content-item:last-child {
	margin-right: 0;
}

.content-error {
	border-color: #af0000;
}

.average {
	font-size: 0.8rem;
}

#select-payment {
	margin-top: 0.5rem;
}

select {
	padding: 0.5rem;
	font-size: 1rem;
}

.table-container {
	width: 100%;
	overflow: auto;
}

table {
	font-size: 1rem;
	margin-top: 1rem;
	width: 100%;
	max-width: 100%;
	color: var(--textSecondary);
	border-collapse: collapse;
	table-layout: fixed;
	white-space: nowrap;
}

th {
	text-align: left;
}

tbody > tr:nth-child(odd) {
	background-color: var(--tableRow);
}

.cell-overflow {
	overflow: hidden;
	text-overflow: ellipsis;
}

.cell-overflow:hover {
	overflow: visible;
	position: absolute;
	background-color: #7f7f7f;
}

.history-button {
	width: 4rem;
	background-color: var(--backgroundForm);
	border: 1px solid var(--textSecondary);
}

.contracts-checkbox-container {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

.contracts-checkbox-container div {
	margin-right: 0.5rem;
}

.contracts-checkbox-container div:last-child {
	margin-right: 0;
}

.contracts-checkbox-container input {
	margin-right: 0;
	cursor: pointer;
}

.contracts-expand {
	font-size: 0.8rem;
}

.sort {
	display: inline-block;
	width: 0.8rem;
	height: 0.8rem;
	cursor: pointer;
	margin-left: 0.2rem;
}

.sort svg {
	display: inline-block;
	width: 100%;
	height: 100%;
}

.sort svg path {
	fill: #7f7f7f;
}

.sort svg path.active {
	fill: #ffffff;
}

#payment-amount {
	width: 100%;
}

#payment-message {
	color: rgb(105, 115, 134);
	font-size: 1rem;
	line-height: 1.25rem;
	padding-top: 0.75rem;
}

#payment-result {
	color: var(--textPrimary);
	font-size: 1rem;
	line-height: 1.25rem;
	margin-top: 0.5rem;
}

#payment-element {
  margin-bottom: 1.5rem;
}

.spinner,
.spinner:before,
.spinner:after {
	border-radius: 50%;
}
.spinner {
	color: var(--textSecondary);
	font-size: 1.4rem;
	text-indent: -99999px;
	margin: 0 auto;
	position: relative;
	width: 1.25rem;
	height: 1.25rem;
	box-shadow: inset 0 0 0 2px;
	-webkit-transform: translateZ(0);
	-ms-transform: translateZ(0);
	transform: translateZ(0);
}
.spinner:before,
.spinner:after {
	position: absolute;
	content: '';
}
.spinner:before {
	width: 0.7rem;
	height: 1.3rem;
	background: var(--button);
	border-radius: 1.3rem 0 0 1.3rem;
	top: -0.2px;
	left: -0.2px;
	-webkit-transform-origin: 0.7rem 0.6rem;
	transform-origin: 0.7rem 0.6rem;
	-webkit-animation: loading 2s infinite ease 1.5s;
	animation: loading 2s infinite ease 1.5s;
}
.spinner:after {
	width: 0.7rem;
	height: 0.6rem;
	background: var(--button);
	border-radius: 0 0.6rem 0.6rem 0;
	top: -0.1px;
	left: 0.6rem;
	-webkit-transform-origin: 0px 0.6rem;
	transform-origin: 0px 0.6rem;
	-webkit-animation: loading 2s infinite ease;
	animation: loading 2s infinite ease;
}
button:hover .spinner:before,
button:hover .spinner:after {
	background: var(--buttonHovered);
}

@-webkit-keyframes loading {
	0% {
		-webkit-transform: rotate(0deg);
		transform: rotate(0deg);
	}
	100% {
		-webkit-transform: rotate(360deg);
		transform: rotate(360deg);
	}
}
@keyframes loading {
	0% {
		-webkit-transform: rotate(0deg);
		transform: rotate(0deg);
	}
	100% {
		-webkit-transform: rotate(360deg);
		transform: rotate(360deg);
	}
}

@media screen and (max-width: 800px) {

	.menu-button {
		display: initial;
	}

	.mobile-hidden {
		display: none;
	}

	.menu {
		position: absolute;
		z-index: 1;
	}

	.page h1 {
		font-size: 1.5rem;
		margin-left: 2rem;
	}

	table {
		font-size: 0.8rem;
	}
}

